src/objects/Apttus_Config2__OrderLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an order</description>
    <fields>
        <fullName>Apttus_Config2__ActivatedDate__c</fullName>
        <description>The date the order item is ready for activation. The order item is activated on this date.</description>
        <inlineHelpText>The date the order item is ready for activation. The order item is activated on this date.</inlineHelpText>
        <label>Ready for Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Base Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the product</description>
        <inlineHelpText>ID of the asset associated with the product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item.</description>
        <inlineHelpText>ID of the associated asset line item.</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_Config2__OrderProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <inlineHelpText>The base cost is Cost + Automatic Adjustments for individual products and options</inlineHelpText>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <inlineHelpText>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</inlineHelpText>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Term (if applicable) X (Base Price + Price Adjustment) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Bill To)</relationshipLabel>
        <relationshipName>OrderLineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CancelledDate__c</fullName>
        <description>The date when the order line item was cancelled</description>
        <inlineHelpText>The date when the order line item was cancelled</inlineHelpText>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type associated with the product or service</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationHierarchy__c</fullName>
        <description>The category hierarchy</description>
        <label>Category Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CommitmentQuantity__c</fullName>
        <description>The quantity commitment associated with the product or option</description>
        <inlineHelpText>The quantity commitment associated with the product or option</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumbers__c</fullName>
        <description>A comma separated list of contract numbers associated with the line item</description>
        <inlineHelpText>A comma separated list of contract numbers associated with the line item</inlineHelpText>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Cost__c</fullName>
        <description>The cost for the product or service with no adjustments</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaPrice__c</fullName>
        <description>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaQuantity__c</fullName>
        <description>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DerivedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the line item this was derived from</description>
        <label>Derived From</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Derived Order Line Items</relationshipLabel>
        <relationshipName>DerivedOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The end date for products and services</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</description>
        <inlineHelpText>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedDescription__c</fullName>
        <description>The extended line description</description>
        <label>Extended Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedQuantity__c</fullName>
        <description>The extended quantity is Quantity X Parent Quantity)</description>
        <inlineHelpText>The extended quantity is Quantity X Parent Quantity)</inlineHelpText>
        <label>Extended Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FlatOptionPrice__c</fullName>
        <description>The rolled up adjusted flat price of options for the bundle product</description>
        <inlineHelpText>The rolled up adjusted flat price of options for the bundle product</inlineHelpText>
        <label>Flat Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Frequency__c</fullName>
        <description>The pricing frequency associated with the recurring or usage price</description>
        <label>Pricing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FulfilledDate__c</fullName>
        <description>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</description>
        <inlineHelpText>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</inlineHelpText>
        <label>Ready for Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FulfilledQuantity__c</fullName>
        <description>The quantity fulfilled for the line item</description>
        <inlineHelpText>The quantity fulfilled for the line item</inlineHelpText>
        <label>Fulfilled Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupAdjustmentPercent__c</fullName>
        <description>The group adjustment percent</description>
        <label>Group Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Guidance__c</fullName>
        <description>The pricing guidance associated with the line item</description>
        <inlineHelpText>The pricing guidance associated with the line item</inlineHelpText>
        <label>Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <inlineHelpText>Indicates whether the product has attributes.</inlineHelpText>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasIncentives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are one or more incentives associated with the line item</description>
        <inlineHelpText>Indicates whether there are one or more incentives associated with the line item</inlineHelpText>
        <label>Has Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <inlineHelpText>Indicates whether the product has options.</inlineHelpText>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the item would be hidden in the invoice display.</description>
        <inlineHelpText>Indicates whether the item would be hidden in the invoice display.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ImpactARR__c</fullName>
        <description>The change in annual recurring revenue due to the order</description>
        <inlineHelpText>The change in annual recurring revenue due to the order</inlineHelpText>
        <label>Impact ARR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ImpactMRR__c</fullName>
        <description>The change in monthly recurring revenue due to the order</description>
        <inlineHelpText>The change in monthly recurring revenue due to the order</inlineHelpText>
        <label>Impact MRR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ImpactTCV__c</fullName>
        <description>The change in TCV due to the order</description>
        <inlineHelpText>The change in TCV due to the order</inlineHelpText>
        <label>ImpactTCV</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveAdjustmentAmount__c</fullName>
        <description>The incentive adjustment amount</description>
        <inlineHelpText>The incentive adjustment amount</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveExtendedPrice__c</fullName>
        <description>The incentive extended price is Quantity X Incentive Base Price X Term (if applicable) for individual products and options</description>
        <inlineHelpText>The incentive extended price is Quantity X Incentive Base Price X Term (if applicable) for individual products and options</inlineHelpText>
        <label>Incentive Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveType__c</fullName>
        <description>The incentive type</description>
        <inlineHelpText>The incentive type</inlineHelpText>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsAssetPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset pricing is in effect for the line item</description>
        <inlineHelpText>Indicates whether asset pricing is in effect for the line item</inlineHelpText>
        <label>Is Asset Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsCustomPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether custom pricing is in effect for the line item</description>
        <inlineHelpText>Indicates whether custom pricing is in effect for the line item</inlineHelpText>
        <label>Is Custom Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsOptionRollupLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is an option rollup line</description>
        <label>Is Option Rollup Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the product or option</description>
        <label>Is Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrimaryRampLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</description>
        <inlineHelpText>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</inlineHelpText>
        <label>Is Primary Ramp Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ItemSequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sequence of items belonging to a line</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineStatus__c</fullName>
        <description>The line status</description>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                    <default>true</default>
                    <label>Product/Service</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxUsageQuantity__c</fullName>
        <description>The maximum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The maximum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Max Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinUsageQuantity__c</fullName>
        <description>The minimum usage quantity. Only applicable to usage items.</description>
        <label>Min Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>